--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,7 @@ body {
   font-family: sans-serif;
   background-image: url('./images/sw-bg.jpg');
   background-size: cover;
+  display: flex;
+  flex-direction: vertical;
+  justify-content: center;
 }
